menu page: header text alignment fix

--- a/wp-content/themes/angular-bootstrap/includes/css/override.css
+++ b/wp-content/themes/angular-bootstrap/includes/css/override.css
@@ -10,7 +10,7 @@
 /*central header text*/
 .header_text {
     position: absolute;
-    top: 250px;
+    top: 200px;
     width: 90%;
 }
 
